# vol-eval

./: .gitignore  CITATION.cff  COVER_LETTER.md  LICENSE  PHASE_2_AND_3.md  README.md  pyproject.toml
examples/: quickstart.py  vol_eval_tutorial.py
paper/: audit.py  build.sh  main.tex
paper/bib/: references.bib
paper/figures/: make_phase2_cross_sections.py  make_phase2_qlike_ratio.py
paper/sections/: 01_introduction.tex  02_package.tex  03_methodology.tex  04_demonstration.tex  05_discussion.tex  05_phase2.tex  06_discussion.tex  06_reproducibility.tex  07_reproducibility.tex
src/vol_eval/: __init__.py
src/vol_eval/losses/: __init__.py
src/vol_eval/tests/: __init__.py  _hac.py  diebold_mariano.py  giacomini_white.py  model_confidence_set.py  reality_check.py  spa.py
studies/: 01_paper2_demonstration.py  02_paper_collection_template.csv  03_apply_voleval_phase2.py  04_search_candidates.py  05_narrow_candidates.py  06_check_unpaywall.py  07_download_papers.py  08_audit_phase2_setup.py  09_extract_paper_metadata.py  10_extract_winner_packets.py  11_extract_jfec_structure.py  12_apply_voleval_per_paper.py  13_aggregate_phase2.py  README.md  candidate_30.csv  candidate_30_access.csv
studies/per_paper/P01_christensen_2023/: metadata.json  winner_packet.txt
studies/per_paper/P02_bucci_2020/: metadata.json  winner_packet.txt
studies/per_paper/P03_luong_2018/: metadata.json  winner_packet.txt
studies/per_paper/P04_bennedsen_2022/: metadata.json  winner_packet.txt
studies/per_paper/P05_buccheri_2021/: metadata.json  winner_packet.txt
studies/per_paper/P06_caporin_2024/: metadata.json  winner_packet.txt
studies/per_paper/P07_hong_2023/: metadata.json  winner_packet.txt
studies/results/: candidates_filtered.csv  candidates_raw.csv  candidates_top.csv  paper2_dm_pairs.json  paper2_full_sample.json  paper2_mcs.json  paper2_spa.json  paper2_subperiod.json  phase2_headline_models.csv  phase2_per_paper_metadata.csv  phase2_rds_final.csv  phase2_rds_strict.csv  phase2_summary.json  structure_notes_jfec.txt
tests/: test_cross_validation_arch.py  test_dm.py  test_gw.py  test_losses.py  test_mcs_spa.py
(+115 files in other folders)
