[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vol-eval"
version = "0.1.0"
description = "Volatility forecast evaluation: standard loss functions plus Diebold-Mariano, Model Confidence Set, SPA, and Reality Check."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Akram Khan", email = "1819ak@gmail.com" },
]
keywords = [
  "volatility-forecasting",
  "diebold-mariano",
  "model-confidence-set",
  "qlike",
  "forecast-evaluation",
  "econometrics",
  "financial-machine-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
docs = [
  "jupyter>=1.0",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/ayk5511/vol-eval"
Documentation = "https://github.com/ayk5511/vol-eval#readme"
Repository = "https://github.com/ayk5511/vol-eval"
Issues = "https://github.com/ayk5511/vol-eval/issues"
Changelog = "https://github.com/ayk5511/vol-eval/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/vol_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
